--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         tools:text="A photo taken at Trevi Fountain, a tourist attraction, at 6pm, weather being broken clouds." />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnShutterSpeed"
+        android:id="@+id/btnLocation"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/side_buttons"
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvPrompt" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnFilter"
+        android:id="@+id/btnFilters"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@drawable/side_buttons"
@@ -75,301 +75,17 @@
         tools:layout_editor_absoluteY="488dp" />
 
 
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:scrollbars="none"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/ivPicture">
-
-
-        <!--Horizontal Chunk-->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <!--Card Yarn-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardYarn"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_margin="18dp"
-                    android:checkable="true"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:checkedIconSize="0dp"
-                    app:strokeColor="@color/card_border_selector"
-                    app:strokeWidth="10dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/yarn1" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Yearning for Yarn" />
-
-            </LinearLayout>
-
-            <!--Card Starry-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardStarry"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_margin="18dp"
-                    android:checkable="true"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:checkedIconSize="0dp"
-                    app:strokeColor="@color/card_border_selector"
-                    app:strokeWidth="10dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/van_gogh" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Very Starry" />
-
-            </LinearLayout>
-
-            <!--Card Diorama-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardDiorama"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_margin="18dp"
-                    android:checkable="true"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:checkedIconSize="0dp"
-                    app:strokeColor="@color/card_border_selector"
-                    app:strokeWidth="10dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/diorama" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Diorama Drama" />
-
-            </LinearLayout>
-
-            <!--Card Watercolour-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardWatercolour"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_margin="18dp"
-                    android:checkable="true"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:checkedIconSize="0dp"
-                    app:strokeColor="@color/card_border_selector"
-                    app:strokeWidth="10dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/watercolour" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Gentlest Watercolor" />
-
-            </LinearLayout>
-
-            <!--Card cardTapestry-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardTapestry"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_margin="18dp"
-                    android:checkable="true"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:checkedIconSize="0dp"
-                    app:strokeColor="@color/card_border_selector"
-                    app:strokeWidth="10dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/tapestry" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Medieval Manuscript" />
-
-            </LinearLayout>
-
-            <!--Card Cartoon-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardCartoon"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_margin="18dp"
-                    android:checkable="true"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:checkedIconSize="0dp"
-                    app:strokeColor="@color/card_border_selector"
-                    app:strokeWidth="10dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/cartoon" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Cartoon Crazy" />
-
-            </LinearLayout>
-
-            <!--Card Clay-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardClay"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_margin="18dp"
-                    android:checkable="true"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:checkedIconSize="0dp"
-                    app:strokeColor="@color/card_border_selector"
-                    app:strokeWidth="10dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/clay" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Claymation Tarnation" />
-
-            </LinearLayout>
-
-            <!--Card Artbook-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cardArtbook"
-                    android:layout_width="130dp"
-                    android:layout_height="130dp"
-                    android:layout_margin="18dp"
-                    android:checkable="true"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="10dp"
-                    app:checkedIconSize="0dp"
-                    app:strokeColor="@color/card_border_selector"
-                    app:strokeWidth="10dp">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/artbook" />
-
-                </com.google.android.material.card.MaterialCardView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Digital Artbook" />
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </HorizontalScrollView>
-
     <TextView
-        android:id="@+id/tvShutterSpeed"
+        android:id="@+id/tvLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:text="Location"
         android:textColor="#B3B3B3"
         android:textSize="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnShutterSpeed"
-        app:layout_constraintEnd_toEndOf="@+id/btnShutterSpeed"
-        app:layout_constraintStart_toStartOf="@+id/btnShutterSpeed" />
+        app:layout_constraintBottom_toTopOf="@+id/btnLocation"
+        app:layout_constraintEnd_toEndOf="@+id/btnLocation"
+        app:layout_constraintStart_toStartOf="@+id/btnLocation" />
 
     <TextView
         android:id="@+id/tvShutter"
@@ -391,9 +107,9 @@
         android:text="Filters"
         android:textSize="10dp"
         android:textColor="#B3B3B3"
-        app:layout_constraintBottom_toTopOf="@+id/btnFilter"
-        app:layout_constraintEnd_toEndOf="@+id/btnFilter"
-        app:layout_constraintStart_toStartOf="@+id/btnFilter" />
+        app:layout_constraintBottom_toTopOf="@+id/btnFilters"
+        app:layout_constraintEnd_toEndOf="@+id/btnFilters"
+        app:layout_constraintStart_toStartOf="@+id/btnFilters" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
