--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,18 +61,30 @@
         app:layout_constraintTop_toTopOf="@+id/btnShutter" />
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/anim"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/animLocation"
+        android:layout_width="143dp"
+        android:layout_height="143dp"
+        app:layout_constraintBottom_toBottomOf="@id/btnLocation"
+        app:layout_constraintEnd_toEndOf="@+id/btnLocation"
+        app:layout_constraintStart_toStartOf="@+id/btnLocation"
+        app:layout_constraintTop_toTopOf="@+id/btnLocation"
         android:visibility="invisible"
+        app:lottie_autoPlay="false"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading_animation" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animShutter"
+        android:layout_width="172dp"
+        android:layout_height="172dp"
         app:layout_constraintBottom_toBottomOf="@id/btnShutter"
         app:layout_constraintEnd_toEndOf="@+id/btnShutter"
         app:layout_constraintStart_toStartOf="@+id/btnShutter"
         app:layout_constraintTop_toTopOf="@+id/btnShutter"
+        android:visibility="invisible"
         app:lottie_autoPlay="false"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/loading_animation"
-        tools:layout_editor_absoluteY="488dp" />
+        app:lottie_rawRes="@raw/loading_animation" />
 
 
     <TextView
